# grpc_gcp

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
src/: auth.rs  config.rs  init_once.rs  lib.rs  main.rs  serde_entity.rs  service.rs  singleton.rs  util.rs
src/firestore/: v1.rs
src/proto/: google.rs
src/proto/google/datastore/: v1.rs
src/proto/google/firestore/: v1.rs
src/serde_entity/: common.rs  deserializer.rs  error.rs  value.rs
src/serde_properties/: common.rs  deserializer.rs  error.rs  value.rs
src/service/: auth.rs  google.rs  macros.rs
src/service/google/: datastore.rs
src/service/google/datastore/: v1.rs
src/service/google/datastore/serde/: deserializer.rs
src/service/google/datastore/v1/: error.rs  serde_properties.rs
src/service/google/datastore/v1/serde_properties/: deserializer.rs
src/service/google/firestore/: v1.rs
src/service/google/firestore/v1/: extensions.rs  models.rs  serde_document.rs
src/service/google/firestore/v1/extensions/: value.rs  value_type.rs
src/service/google/firestore/v1/models/: collection_reference.rs  document_reference.rs
src/service/google/firestore/v1/serde/: deserializer.rs
src/service/google/firestore/v1/serde_document/: common.rs  deserializer.rs  error.rs
src/service/google/firestore/v1/serde_fields/: deserializer.rs
src/service/google/pubsub/: v1.rs
src/service/google/pubsub/v1/: error.rs  models.rs
src/util/: init_once.rs
