[package]
name = "grpc_gcp"
version = "0.1.0"
authors = ["Koji Murata <malt.koji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "^0.3.1", features = ["tls", "tls-roots"] }
prost = "^0.6.1"
prost-types = "^0.6.1"
gcp_auth = "^0.1.5"

[build-dependencies]
tonic-build = "^0.3.1"
