[package]
name = "grpc_gcp"
version = "0.1.0"
authors = ["Koji Murata <malt.koji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "^0.3.1", features = ["tls", "tls-roots"] }
prost = "^0.6.1"
prost-types = "^0.6.1"
gcp_auth = "^0.1.5"
tokio = { version = "0.2", features = ["macros"] }
once_cell = "^1.5.2"
futures = "^0.3.8"
http = "^0.2.1"
serde = "^1.0"
async-trait = "^0.1.42"
serde_bytes = "^0.11"

[build-dependencies]
tonic-build = "^0.3.1"
